Kubernetes/Manifests/longhorn-frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-http-route
  namespace: longhorn-system # The namespace where your application service is located
spec:
  parentRefs:
  - name: http-gateway
    namespace: kube-system # The namespace where your Gateway is located
  hostnames:
  - "longhorn.nscubed.lan"
  rules:
  - backendRefs:
    - name: longhorn-frontend # The name of your service
      port: 80 # The port your service is listening on
