Kubernetes/Manifests/nginx-test-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-test-route
  namespace: default # The namespace where your application service is located
spec:
  parentRefs:
  - name: http-gateway
    namespace: kube-system # The namespace where your Gateway is located
  hostnames:
  - "test-nginx.nscubed.lan"
  rules:
  - backendRefs:
    - name: nginx-test-service # The name of your service
      port: 80 # The port your service is listening on
